<resources>
    <string name="app_name">UAS 180030033 1</string>
    <string name="song_title">Judul Lagu</string>
    <string name="song_artist">Nama Penyanyi</string>
    <string name="song_album">Nama Album</string>
    <string name="song_date">Tanggal Rilis</string>
    <string name="song_image">Cover Album</string>
    <string name="song_lyrics">Ini adalah lirik</string>
    <string name="pin_lyrics">Lirik</string>
    <string name="add">Tambah Lagu</string>
    <string name="edit">Ubah Lagu</string>
    <string name="save">Simpan</string>
    <string name="del">Hapus Lagu</string>
</resources>
